--- a/index.html
+++ b/index.html
@@ -7,6 +7,49 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <header>
+ <section>
+    <div class="banner">
+        <div class="heading">
+            <h2>Let's make <br> beautiful flowers a <br> part of your life.</h2>
+            <p class="heading-p">
+                It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.The point of using Lorem Ipsum is <br> that it has a more-or-less normal distribution of letters.
+            </p>
+        </div>
+
+
+        <div>
+            <Button class="shop-now">Shop Now</Button>
+        </div>
+
+
+        <div class="heading-image">
+            <img width="350px" src="./Flower Asset/pngwing 10.png" alt="">
+
+
+        </div>
+
+       
+
+    </div>
+  </section>
+</header>
+ 
+
+<main>
+
+
+
+
+</main>
+
+<footer>
+
+
+
+
+</footer>
+
+
 </body>
 </html>
