--- a/index.html
+++ b/index.html
@@ -169,7 +169,14 @@
 
 <footer>
 
+<div class="footer-part">   
+    <h3 class="featured-title , footer-part"> <span style="color:#E55473">Flower</span>Shop</h3>
+    <p class="title-P , footer-part ">
+        It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.
+    </p>
+   <p class="copy"> @2020-2023, FlowerShop.com. All rights reserved.</p> 
 
+</div>
 
 
 </footer>
