--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
         <div class="heading-image">
-            <img width="350px" src="./Flower Asset/pngwing 10.png" alt="">
+            <img width="350px" src="./images/pngwing 10.png" alt="">
 
 
         </div>
@@ -49,16 +49,16 @@
 
         <div class="featured-images">
              <div class="box-1">
-                 <img  width="190px" height="265px"  src="./Flower Asset/pngwing 6.png" alt="">
+                 <img  width="190px" height="265px"  src="./images/pngwing 6.png" alt="">
             </div>
 
 
             <div class="box-2">
-            <img width="200px" height="250px" src="./Flower Asset/pngwing 5.png" alt="">
+            <img width="200px" height="250px" src="./images/pngwing 5.png" alt="">
             </div>
 
             <div class="box-3">
-            <img width="190px" height="265px" src="./Flower Asset/pngwing 7.png" alt="">
+            <img width="190px" height="265px" src="./images/pngwing 7.png" alt="">
             </div>
 
         </div>
@@ -73,11 +73,11 @@
 
      <section class="extra">
         <div class="service-img">
-            <img src="./Flower Asset/Group 57.png" alt="">
+            <img src="./images/Group 57.png" alt="">
 
-            <img src="./Flower Asset/Group 58.png" alt="">
+            <img src="./images/Group 58.png" alt="">
 
-            <img src="./Flower Asset/Group 59.png" alt="">
+            <img src="./images/Group 59.png" alt="">
 
 
 
@@ -109,7 +109,7 @@
             </div>
 
             <div class="heading-image">
-                <img width="350px" src="./Flower Asset/pngwing 8.png" alt="">
+                <img width="350px" src="./images/pngwing 8.png" alt="">
     
     
             </div>    
@@ -129,20 +129,20 @@
 
         <div class="featured-images , social">
              <div>
-                 <img width="250px" src="./Flower Asset/Flower 01.png" alt="">
+                 <img width="250px" src="./images/Flower 01.png" alt="">
             </div>
 
 
             <div>
-            <img width="250px" src="./Flower Asset/Rectangle 4.png"alt="">
+            <img width="250px" src="./images/Rectangle 4.png"alt="">
             </div>
 
             <div>
-                <img width="250px" src="./Flower Asset/Rectangle 5.png" alt="">
+                <img width="250px" src="./images/Rectangle 5.png" alt="">
             <img src="" alt="">
             </div>
             <div>
-                <img width="250px" src="./Flower Asset/Rectangle 6.png" alt="">
+                <img width="250px" src="./images/Rectangle 6.png" alt="">
             </div>
 
         </div>
