--- a/index.html
+++ b/index.html
@@ -148,6 +148,22 @@
         </div>
         </section>
 
+        <div class="mine">
+
+            <div class="own"><strong>“Happiness held is the seed; Happiness shared is the flower.”</strong><br>
+                – John Harrigan <br></div>
+                <p class="greet">
+                Stay with <span style="color: #E55473">Flower</span>Shop
+                </p>
+
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/pZVdQLn_E5w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+
+
+
+
+
+        </div>
 
 
   <div class="Last">
